@@ -273,6 +273,8 @@ static slurm_errtab_t slurm_errtab[] = {
 	  "User not found on host"                              },
 	{ ESLURMD_GID_NOT_FOUND,
 	  "Group ID not found on host"                          },
+	{ ESLURMD_INVALID_ACCT_FREQ,
+	  "Invalid accounting frequency requested"		},
 	{ ESLURMD_INVALID_JOB_CREDENTIAL,
 	  "Invalid job credential"				},
 	{ ESLURMD_CREDENTIAL_REVOKED,
